things im too lazy to detail, basically nothing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,5 @@ combine_star = true
 line_length = 140
 
 # theres so much to fix here but i dont want to see all the red right now
-# [tool.pyright]
-# typeCheckingMode = "basic"
+[tool.pyright]
+typeCheckingMode = "basic"
